fix(message): adjust style of list items to overflow correctly

--- a/src/app/message/message.component.styl
+++ b/src/app/message/message.component.styl
@@ -13,9 +13,9 @@ md-input-container /deep/ .mat-input-wrapper
 .message-row /deep/ md-list-item /deep/ h3
   margin-top: 5px
 
-.message-row /deep/ md-list-item /deep/ .mat-list-item
+.message-row /deep/ md-list-item /deep/ .mat-list-item-content
   min-height: 72px
-  height: auto
+  height: auto !important
   position: relative
   -webkit-box-align: flex-start
   -ms-flex-align: flex-start
